# autohooks

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  RELEASE.md  pre-commit  pyproject.toml  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-merge.yml  ci-python.yml  codeql-analysis-python.yml  dependa-flow.yml  deploy-pypi.yml  github-pages.yml  release-pontos-manually.yml  release-pontos.yml  release.yml
autohooks/: __init__.py  __version__.py  api.py  config.py  hooks.py  install.py  postinstall.py  setting.py  settings.py  template.py  terminal.py  utils.py  version.py
autohooks/api/: __init__.py  git.py  path.py
autohooks/cli/: __init__.py  activate.py  check.py  plugins.py
autohooks/plugins/: black.py  pylint.py
autohooks/precommit/: __init__.py  black.py  run.py  template  template_pipenv
changelog/: v22.11.0.md  v22.11.1.md  v22.11.2.md  v22.7.0.md  v22.7.1.md  v22.7.2.md  v22.8.0.md  v22.8.1.md  v23.1.0.md
docs/: api.rst  conf.py  configuration.md  create.md  index.md  installation.md  modes.md  plugins.md  quickstart.md
docs/_static/: custom.css
tests/: __init__.py  pyproject.test1.toml  pyproject.test2.toml  test_config.py  test_hooks.py  test_install.py  test_setting.py  test_settings.py  test_template.py  test_terminal.py  test_utils.py
tests/api/: __init__.py  test_api.py  test_path.py  test_terminal.py
tests/api/git/: __init__.py  test_diff.py  test_stash.py  test_status.py
tests/cli/: __init__.py  test_activate.py  test_check.py  test_plugins.py
tests/precommit/: __init__.py  test_run.py
tests/version/: test_autohooks_version_command.py  test_get_current_version.py  test_get_version_from_pyproject_toml.py  test_is_version_pep440_compliant.py  test_print_current_version.py  test_safe_version.py  test_strip_version.py  test_update_pyroject_version.py  test_update_version_file.py  test_verify_version.py  test_version_error.py
