[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autohooks"
version = "25.11.0"
description = "Library for managing git hooks"
authors = ["Greenbone AG <info@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks/"
repository = "https://github.com/greenbone/autohooks/"
documentation = "https://greenbone.github.io/autohooks/"
# Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "formatting", "linting", "hooks"]

packages = [
  { include = "autohooks" },
  { include = "tests", format = "sdist" },
  { include = "poetry.lock", format = "sdist" },
]
include = ["autohooks/precommit/template"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = ">=0.5.11"
pontos = ">=22.8.0"
rich = ">=12.5.1"
shtab = ">=1.7.0"

[tool.poetry.group.dev.dependencies]
autohooks-plugin-black = ">=21.12.0"
autohooks-plugin-ruff = ">=23.6.0"
autohooks-plugin-mypy = ">=23.3.0"
coverage = ">=7.2.7"
rope = ">=1.9.0"
Sphinx = ">=5.3.0"
furo = ">=2023.3.27"
myst-parser = ">=1.0.0"
sphinx-tabs = ">=3.4.0"
mypy = ">=0.991"

[tool.poetry.scripts]
autohooks = "autohooks.cli:main"

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
pre-commit = [
  'autohooks.plugins.black',
  'autohooks.plugins.ruff',
  'autohooks.plugins.mypy',
]
mode = "poetry"

[tool.pontos.version]
version-module-file = "autohooks/__version__.py"

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
files = "autohooks"
ignore_missing_imports = true
explicit_package_bases = true

[tool.coverage.run]
omit = ["tests/*", "*/__init__.py"]
source = ["autohooks"]

[tool.ruff]
line-length = 80
target-version = "py39"
extend-select = ["I", "PLE", "PLW"]
